[gd_scene load_steps=10 format=3 uid="uid://cotqfbb30dfrn"]

[ext_resource type="Script" path="res://scene/ui/tutorial_screen/tutorial_screen.gd" id="1_4t0vt"]
[ext_resource type="Texture2D" uid="uid://bf0srcetnxyn0" path="res://asset/ui/blue_panel.png" id="1_nd6aq"]
[ext_resource type="FontFile" uid="uid://do7qn87ixk2yo" path="res://asset/font/Kenney Pixel.ttf" id="2_j76ig"]
[ext_resource type="Texture2D" uid="uid://cjf06jvj1t106" path="res://asset/ui/grey_panel.png" id="3_kqlyt"]
[ext_resource type="Texture2D" uid="uid://ljxvcxjxjewl" path="res://asset/tutorial/1.png" id="4_b0ses"]
[ext_resource type="Texture2D" uid="uid://ce706rye8cmsn" path="res://asset/tutorial/2.png" id="5_rirod"]
[ext_resource type="Texture2D" uid="uid://bhtreokiygyou" path="res://asset/ui/blue_button00.png" id="5_us4oe"]
[ext_resource type="Texture2D" uid="uid://dgw7kiask1kcg" path="res://asset/ui/blue_button01.png" id="6_ue48y"]
[ext_resource type="Texture2D" uid="uid://607rqpq03unf" path="res://asset/tutorial/3.png" id="6_uyp35"]

[node name="TutorialScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4t0vt")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="BasePanel" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.0
offset_top = -155.0
offset_right = 258.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nd6aq")

[node name="Label" type="Label" parent="Background/BasePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -99.0
offset_top = 2.0
offset_right = 100.0
offset_bottom = 49.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_j76ig")
theme_override_font_sizes/font_size = 42
text = "TUTORIAL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="TextureRect" parent="Background/BasePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.0
offset_top = -114.0
offset_right = 259.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_kqlyt")

[node name="Tutorial1" type="Control" parent="Background/BasePanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Background/BasePanel/Panel/Tutorial1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -113.0
offset_top = 20.0
offset_right = 113.0
offset_bottom = 131.0
grow_horizontal = 2
texture = ExtResource("4_b0ses")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="Background/BasePanel/Panel/Tutorial1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = 15.0
offset_right = 208.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_j76ig")
theme_override_font_sizes/font_size = 32
text = "Use Arrow Key to move
Use Arrow UP or X to jump"
horizontal_alignment = 1

[node name="Tutorial2" type="Control" parent="Background/BasePanel/Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Background/BasePanel/Panel/Tutorial2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -113.0
offset_top = 20.0
offset_right = 113.0
offset_bottom = 131.0
grow_horizontal = 2
texture = ExtResource("5_rirod")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="Background/BasePanel/Panel/Tutorial2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = 15.0
offset_right = 208.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_j76ig")
theme_override_font_sizes/font_size = 32
text = "Use Z to pickup the Package
Deliver the Package to recipient"
horizontal_alignment = 1

[node name="Tutorial3" type="Control" parent="Background/BasePanel/Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Background/BasePanel/Panel/Tutorial3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -113.0
offset_top = 20.0
offset_right = 113.0
offset_bottom = 131.0
grow_horizontal = 2
texture = ExtResource("6_uyp35")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="Background/BasePanel/Panel/Tutorial3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.0
offset_top = 7.5
offset_right = 236.0
offset_bottom = 58.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_j76ig")
theme_override_font_sizes/font_size = 32
text = "Use Z to give the Package
Never  deliver  the  Package to  wrong  recipient"
horizontal_alignment = 1

[node name="Back" type="TextureButton" parent="Background/BasePanel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.0
offset_top = 71.0
offset_right = 9.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
texture_normal = ExtResource("5_us4oe")
texture_hover = ExtResource("6_ue48y")
stretch_mode = 0

[node name="Label" type="Label" parent="Background/BasePanel/Panel/Back"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -11.5
offset_right = 32.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_j76ig")
theme_override_font_sizes/font_size = 36
text = "BACK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Next" type="TextureButton" parent="Background/BasePanel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = 72.0
offset_right = 205.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
texture_normal = ExtResource("5_us4oe")
texture_hover = ExtResource("6_ue48y")
stretch_mode = 0

[node name="Label" type="Label" parent="Background/BasePanel/Panel/Next"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -11.5
offset_right = 32.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_j76ig")
theme_override_font_sizes/font_size = 36
text = "NEXT
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Background/BasePanel/Panel/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Background/BasePanel/Panel/Next" to="." method="_on_next_pressed"]
